--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,14 +1,14 @@
 h1 All Events
 
 - @events.each do |event|
-  .col-md-3
-    .box.panel.panel-default
+  .col-md-4
+    .event-box.panel.panel-default
       .panel-heading
         = link_to event.title, event
 
       .panel-body
         = image_tag google_map(center: [ event.address, event.city, event.state, event.zip_code ].join(','))
-
+        br
         = event.description
 
       .panel-footer
