--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,6 +1,8 @@
-h1 = @event.title
+h1.text-center = @event.title
 - if @event.user == current_user
-  h5 = link_to "Edit my event", edit_event_path
+  h5.text-center = link_to "Edit my event", edit_event_path
+
+  = image_tag google_map_show(center: [@event.address, @event.city, @event.state, @event.zip_code ].join(','))
 p = @event.event_organizer
 p = @event.description
 p = @event.date.strftime("%a, %B %d, %Y")
