span map across entire width

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -9,3 +9,12 @@
 .event-box img {
   width: 100%;
 }
+
+#events {
+  background: white;
+  padding: 1em 5%;
+  border-radius: .5em;
+  img {
+    width: 100%;
+  }
+}
