--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -12,6 +12,7 @@ h1 All Events
         = event.description
 
       .panel-footer
-        = event.date.strftime("%a, %B %d, %Y")
-        br
-        = event.time_start.strftime("%I:%M %p")
+        strong
+          = event.date.strftime("%a, %B %d, %Y")
+          br
+          = event.time_start.strftime("%I:%M %p")
